--- a/vocabularyapp.html
+++ b/vocabularyapp.html
@@ -37,7 +37,7 @@
        <div> <!--Vocabulary App page-->
         <!--Add Table of Contents on left side of page???-->
             <div><!--total container-->
-                <div><!--hero section-->
+                <div id="vocab-hero"><!--hero section-->
                     <h1>Vocabulary App Case Study</h1>
                     <picture>
                         <source srcset="img/vocabularyapp/all_imgs/vocabappmockup_one.jpg" media="(max-width:767px)">
@@ -51,7 +51,7 @@
                     <p>Competitve analysis, user interviews, persona creation, card sorting, wireframing, prototyping, and usability testing.</p>
                 </div>
 
-                <div><!--Vocabulary Journey-->
+                <div id="vocab-journey"><!--Vocabulary Journey-->
                     <div><!--Introduction-->
                         <h2>Introduction</h2>
                         <h3>Objective:</h3>
@@ -67,7 +67,7 @@
                         <p>1 month</p>
                     </div>
 
-                    <div><!--My Process-->
+                    <div id="vocab-process"><!--My Process-->
                         <h2>My Process</h2>
                         <ol>
                             <li>User Research
@@ -98,7 +98,7 @@
                         </ol>
                     </div>
 
-                    <div><!--Overview-->
+                    <div id="vocab-overview"><!--Overview-->
                         <h2>Overview</h2>
                         <h3>Research</h3>
                         <p>The purpose of the app is for people of all backgrounds and ages can learn something new. Where they can use on the go for a quick study 
@@ -165,7 +165,7 @@
 
                     </div><!--End of Overview-->
 
-                    <div><!--Conclusion-->
+                    <div id="vocab-conclusion"><!--Conclusion-->
                         <div><!--Challenges-->
                             <h2>Challenges</h2>
                             <p>Surprisingly, learning to be user-centric throughout the project was not the hardest part even though that was the main focus of this project. 
