--- a/about.html
+++ b/about.html
@@ -96,14 +96,13 @@
             </p>
 
             <!--Social Media-->
-            <div>
-                <a href="https://www.linkedin.com/in/michelletnle/" target="_blank">
-                    <img src="img/icons/icons8-linkedin.svg" alt="LinkedIn logo"
-                    style="object-fit: contain;
-                    width:24px;
-                    height:24px;">
-                </a>
-            </div>
+            <ul class="social">
+                <li>
+                    <a href="https://www.linkedin.com/in/michelletnle/" target="_blank">
+                        <img src="img/icons/icons8-linkedin.svg" alt="LinkedIn logo">
+                    </a>
+                </li>
+            </ul>
 
             <!--Copyright-->
             <div>
