--- a/vocabularyapp.html
+++ b/vocabularyapp.html
@@ -200,20 +200,20 @@
             </p>
 
             <!--Social Media-->
-            <div>
-                <a href="https://www.linkedin.com/in/michelletnle/" target="_blank">
-                    <img src="img/icons/icons8-linkedin.svg" alt="LinkedIn logo"
-                    style="object-fit: contain;
-                    width:24px;
-                    height:24px;">
-                </a>
-            </div>
+            <ul class="social">
+                <li>
+                    <a href="https://www.linkedin.com/in/michelletnle/" target="_blank">
+                        <img src="img/icons/icons8-linkedin.svg" alt="LinkedIn logo">
+                    </a>
+                </li>
+            </ul>
 
             <!--Copyright-->
             <div>
                 <p>COPYRIGHT MICHELLE LE 2023</p>
             </div>
         </div>
+
     </footer>
 </body>
 </html>
