--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 <!--Header-->
     <header>
-        <div>
+        <div class="container"> 
             <!--logo-->
             <a class="header-link" href="index.html">Michelle Le</a>
             
@@ -35,7 +35,7 @@
     <main>
         <!--Hero Section-->
         <div id="hero">
-            <div>
+            <div class="container">
                 <h1>Hi, I'm Michelle Le.</h1>
                 <span>I'm an aspiring user developer, creating inclusive designs for a genuine experience.</span>
             </div>
@@ -44,7 +44,7 @@
         <!--Project Section-->
         <div id="project">
             <!--Containment Block-->
-            <div>
+            <div class="container">
                 <h2>Projects</h2>
                 <!--PlutoPay Project-->
                 <!--2 columns-->
@@ -105,7 +105,7 @@
 <!--Footer-->
     <footer id="contact">
         <!--container-->
-        <div>
+        <div class="container">
             <h2>Contact Me</h2>
             <p>If you would like to discuss more, share feedback, or ask any questions, please contact me.</p>
             
