--- a/index.html
+++ b/index.html
@@ -52,16 +52,15 @@
                 <div id="p-plutopay">
                     <!--First Column/Row (Image) -->
                     <div class="row">
-                        <picture>
-                            <!--Mobile first image-->
-                            <source srcset="img/plutopay/homepageimg/plutopay-mockup2_one.jpg"
-                                media="(max-width:767px)">
-                            <!--Larger image-->
-                            <img src="img/plutopay/homepageimg/plutopay-mockup2_two.jpg" alt="PlutoPay mockup">
-                        </picture>
-                        
-                        <!--Second Column (Details)-->
-                        <div>
+                        <div class="col-md-6"><!--Second Column (Details)-->
+                            <picture>
+                                <!--Mobile first image-->
+                                <source srcset="img/plutopay/homepageimg/plutopay-mockup2_one.jpg"
+                                    media="(max-width:767px)">
+                                <!--Larger image-->
+                                <img src="img/plutopay/homepageimg/plutopay-mockup2_two.jpg" alt="PlutoPay mockup">
+                            </picture>
+                
                             <h3>PlutoPay</h3>
                             <p>A CareerFoundry Project.</p>
                             <p>A responsive web app that potential users can use to transfer money, create goals and
