--- a/about.html
+++ b/about.html
@@ -45,8 +45,9 @@
                     <img src="img/professionalpic_two.jpg" alt="professional headshot">
                 </picture>
                 <div class="container"> <!--container for rows and columns-->
-                    <div class="row"> <!--first column-->
-                        <h2>I live for the adventures that shakes my soul.</h2>
+                    <div class="row">
+                        <div class="col-md-6"><!--First Column-->
+                            <h2>I live for the adventures that shakes my soul.</h2>
                         <p>
                             I love to think creatively and challenge myself to create authentic and compassionate pieces. 
                             My background in mechanical engineering gives me the problem solving skills and research skills to create fulfilling projects. 
@@ -55,28 +56,29 @@
                             I'm currently available for full-time hire, located in Manhattan, KS but open to relocating. 
                         </p>
                         <a class="primary-button" href="files/MichelleLe_Resume.pdf" target="_blank">View my Resume</a>
-                    </div>
-
-                    <div id="skills"><!--second column/row-->
-                        <h2>Skills and Tools</h2>
-                        <div> <!--My skills section-->
-                            <h3>My Skills</h3>
-                            <ul>
-                                <li>HTML 5</li>
-                                <li>Python</li>
-                                <li>User Research</li>
-                                <li>Wireframing</li>
-                                <li>Information Architecture</li>
-                            </ul>
                         </div>
-
-                        <div> <!--Tools I use-->
-                            <h3>Tools I Use</h3>
+                        
+                        <div id="skills" class="col-md-6"><!--second column/row-->
+                            <h2>Skills and Tools</h2>
+                            <div> <!--My skills section-->
+                                <h3>My Skills</h3>
                                 <ul>
-                                    <li>Figma</li>
-                                    <li>Visual Studio Code</li>
-                                    <li>Microsoft Office</li>
+                                    <li>HTML 5</li>
+                                    <li>Python</li>
+                                    <li>User Research</li>
+                                    <li>Wireframing</li>
+                                    <li>Information Architecture</li>
                                 </ul>
+                            </div>
+    
+                            <div> <!--Tools I use-->
+                                <h3>Tools I Use</h3>
+                                    <ul>
+                                        <li>Figma</li>
+                                        <li>Visual Studio Code</li>
+                                        <li>Microsoft Office</li>
+                                    </ul>
+                            </div>
                         </div>
                     </div>
                 </div> <!--End of container of second half of page-->           
