--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <div id="p-plutopay">
                     <!--First Column/Row (Image) -->
                     <div class="row">
-                        <div class="col-md-6"><!--Second Column (Details)-->
+                        <div class="col-md-6"><!--First Column-->
                             <picture>
                                 <!--Mobile first image-->
                                 <source srcset="img/plutopay/homepageimg/plutopay-mockup2_one.jpg"
@@ -60,7 +60,9 @@
                                 <!--Larger image-->
                                 <img src="img/plutopay/homepageimg/plutopay-mockup2_two.jpg" alt="PlutoPay mockup">
                             </picture>
-                
+                        </div>
+
+                        <div class="col-md-6"> <!--Second Column-->
                             <h3>PlutoPay</h3>
                             <p>A CareerFoundry Project.</p>
                             <p>A responsive web app that potential users can use to transfer money, create goals and
@@ -78,16 +80,18 @@
                 <div id="p-vocab">
                     <!--First Column (Image)-->
                     <div class="row">
-                        <picture>
-                            <!--Mobile first image-->
-                            <source srcset="img/vocabularyapp/homepageimgs/revisedvocabapp_one.jpg"
-                                media="(max-width:767px)">
-                            <!--Larger image-->
-                            <img src="img/vocabularyapp/homepageimgs/revisedvocabapp_two.jpg"
-                                alt="Vocabulary App Mockup">
-                        </picture>
-                        <!--Second Column (Details)-->
-                        <div>
+                        <div class="col-md-6"><!--First Column-->
+                            <picture>
+                                <!--Mobile first image-->
+                                <source srcset="img/vocabularyapp/homepageimgs/revisedvocabapp_one.jpg"
+                                    media="(max-width:767px)">
+                                <!--Larger image-->
+                                <img src="img/vocabularyapp/homepageimgs/revisedvocabapp_two.jpg"
+                                    alt="Vocabulary App Mockup">
+                            </picture>
+                        </div>
+                        
+                        <div class ="col-md-6"> <!--Second Column-->
                             <h3>Vocabulary Project</h3>
                             <p>A CareerFoundry Project.</p>
                             <p>A vocabulary application that empowers people to learn what they thought they couldn't
