--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 <body>
     <!--Header-->
     <header>
-        <div class="container">
+        <div class="container"> <!--header container-->
             <!--logo-->
-            <a class="header-link" href="index.html">Michelle Le</a>
+            <a class="header-title" href="index.html">Michelle Le</a>
 
             <nav>
                 <ul>
@@ -52,7 +52,7 @@
                 <div id="p-plutopay">
                     <!--First Column/Row (Image) -->
                     <div class="row">
-                        <div class="col-md-6"><!--First Column-->
+                        <div class="col-md-6 col-lg-7"><!--First Column-->
                             <picture>
                                 <!--Mobile first image-->
                                 <source srcset="img/plutopay/homepageimg/plutopay-mockup2_one.jpg"
@@ -62,14 +62,14 @@
                             </picture>
                         </div>
 
-                        <div class="col-md-6"> <!--Second Column-->
+                        <div class="col-md-6 col-lg-5"> <!--Second Column-->
                             <h3>PlutoPay</h3>
                             <p>A CareerFoundry Project.</p>
                             <p>A responsive web app that potential users can use to transfer money, create goals and
                                 budgets,
                                 and track all of their money without the need to visit a physical bank or store. </p>
                             <!--Button/Link for Project-->
-                            <a class="primary-button" href="plutopay.html">View Case Study</a>
+                            <a class="button-21" href="plutopay.html">View Case Study</a>
                         </div>
                     </div>
 
@@ -80,7 +80,7 @@
                 <div id="p-vocab">
                     <!--First Column (Image)-->
                     <div class="row">
-                        <div class="col-md-6"><!--First Column-->
+                        <div class="col-md-6 col-lg-7"><!--First Column-->
                             <picture>
                                 <!--Mobile first image-->
                                 <source srcset="img/vocabularyapp/homepageimgs/revisedvocabapp_one.jpg"
@@ -91,7 +91,7 @@
                             </picture>
                         </div>
                         
-                        <div class ="col-md-6"> <!--Second Column-->
+                        <div class ="col-md-6 col-lg-5"> <!--Second Column-->
                             <h3>Vocabulary Project</h3>
                             <p>A CareerFoundry Project.</p>
                             <p>A vocabulary application that empowers people to learn what they thought they couldn't
@@ -99,7 +99,7 @@
                                 This project was the start of my UX journey.
                             </p>
 
-                            <a class="primary-button" href="vocabularyapp.html">View Case Study</a>
+                            <a class="button-21" href="vocabularyapp.html">View Case Study</a>
                         </div>
                     </div> 
                 </div> <!--End of Vocab Project-->
