--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
                             In my free time, you can find me cozied up at home reading a good book, or hiking the nearest mountain (the easy route of course). 
                             I'm currently available for full-time hire, located in Manhattan, KS but open to relocating. 
                         </p>
-                        <a class="primary-button" href="files/MichelleLe_Resume.pdf" target="_blank">View my Resume</a>
+                        <a class="secondary-button" href="files/MichelleLe_Resume.pdf" target="_blank">View My Resume</a>
                         </div>
                         
                         <div id="skills" class="col-md-6"><!--second column/row-->
