--- a/plutopay.html
+++ b/plutopay.html
@@ -44,7 +44,7 @@
                     </picture>
 
                     <!--button to view prototype-->
-                    <a href="https://www.figma.com/file/UTSGuIsi6WGPvDhYzCYnUn/PlutoPay?type=design&node-id=20%3A35&mode=design&t=xYiiR7G1vWsVQ47b-1" target="_blank">View PlutoPay Prototype</a>
+                    <a class="primary-button" href="https://www.figma.com/file/UTSGuIsi6WGPvDhYzCYnUn/PlutoPay?type=design&node-id=20%3A35&mode=design&t=xYiiR7G1vWsVQ47b-1" target="_blank">View PlutoPay Prototype</a>
                     
                     <h3>Main focus:</h3>
                     <p>Create an application from scratch. Grow user experience skills.</p>
