--- a/plutopay.html
+++ b/plutopay.html
@@ -6,7 +6,8 @@
     <meta name="author" content="Michelle Le">
     <meta name="description" content="PlutoPay Case Study">
     <link rel="shortcut icon" href="img/icons/favicon.ico">
-    <link rel="stylesheet" type="text/css" href="css/normalize.css">
+    <link rel="stylesheet" type="text/css"
+        href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,15 +18,17 @@
 <body>
     <!--Header-->
     <header>
-        <div class="container">
+        <div class="container"> <!--header container-->
             <!--logo-->
-            <a class="header-link" href="index.html">Michelle Le</a>
+            <a href="index.html">
+                <img src="img/icons/favicon.ico" class="logo" alt="Logo" >
+            </a>
 
             <nav>
-                <ul>
-                    <li><a class="header-link" href="index.html">Work</a></li>
-                    <li><a class="header-link" href="about.html">About</a></li>
-                    <li><a class="header-link" href="#contact">Contact</a></li>
+                <ul class="navigation">
+                    <li><a href="index.html">Work</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -218,10 +221,11 @@
             <h2>Contact Me</h2>
             <p>If you would like to discuss more, share feedback, or ask any questions, please contact me.</p>
 
-            <p> Call me at <a href="tel:316-214-0954">316-214-0954</a> or email me at
-                <a href="mailto:michtn.le@gmail.com">michtn.le@gmail.com</a>
-            </p>
-
+            <p> Call me at <a href="tel:316-214-0954">316-214-0954</a> or email me at </p>
+            <div> 
+                <a href="mailto:michtn.le@gmail.com" class="button contact">michtn.le@gmail.com</a>
+            </div>
+           
             <!--Social Media-->
             <ul class="social">
                 <li>
@@ -232,9 +236,7 @@
             </ul>
 
             <!--Copyright-->
-            <div>
-                <p>COPYRIGHT MICHELLE LE 2023</p>
-            </div>
+            <p>Copyright Michelle Le 2023</p>
         </div>
 
     </footer>
