--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
                 <!--CSS Animation-->
                 <!--2 columns-->
-                <div id="css-animation">
+                <div>
                     <div class="row"><!-- open row that holds (2) columns for project -->
                         <div class="column col-md-6 col-lg-7"><!-- open first column (used for image) -->
                             <div class="svg-animation">
