--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <div id="p-plutopay">
                     <!--First Column/Row (Image) -->
                     <div class="row">
-                        <div class="col-md-6 col-lg-7"><!--First Column-->
+                        <div class="column col-md-6 col-lg-7"><!--First Column-->
                             <picture>
                                 <!--Mobile first image-->
                                 <source srcset="img/plutopay/homepageimg/plutopay-mockup2_one.jpg"
@@ -63,7 +63,7 @@
                             </picture>
                         </div>
 
-                        <div class="col-md-6 col-lg-5"> <!--Second Column-->
+                        <div class=" column col-md-6 col-lg-5"> <!--Second Column-->
                             <h3>PlutoPay</h3>
                             <p>A CareerFoundry Project.</p>
                             <p>A responsive web app that potential users can use to transfer money, create goals and
@@ -92,7 +92,7 @@
                             </picture>
                         </div>
                         
-                        <div class ="col-md-6 col-lg-5"> <!--Second Column-->
+                        <div class ="column col-md-6 col-lg-5"> <!--Second Column-->
                             <h3>Vocabulary Project</h3>
                             <p>A CareerFoundry Project.</p>
                             <p>A vocabulary application that empowers people to learn what they thought they couldn't
