--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 
             <nav>
                 <ul class="navigation">
-                    <li><a class="active" href="index.html">Work</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li class="pullUp"><a href="index.html">Work</a></li>
+                    <li class="pullUp"><a href="about.html">About</a></li>
+                    <li class="pullUp"><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
         </div>
