--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="shortcut icon" href="img/icons/favicon.ico">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <script src="https://kit.fontawesome.com/2f7e34f5e1.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@400;700&display=swap" rel="stylesheet">
@@ -20,17 +21,22 @@
     <header>
         <div class="container"> <!--header container-->
             <!--logo-->
-            <a href="index.html">
-                <img src="img/icons/favicon.ico" class="logo" alt="Logo" >
-            </a>
-
-            <nav>
-                <ul class="navigation">
-                    <li class="pullUp"><a href="index.html">Work</a></li>
-                    <li class="pullUp"><a href="about.html">About</a></li>
-                    <li class="pullUp"><a href="#contact">Contact</a></li>
-                </ul>
-            </nav>
+            <div class="navtoggle" id="myNavtoggle">
+                <a href="index.html">
+                    <img src="img/icons/favicon.ico" class="logo" alt="Logo" >
+                </a>
+    
+                <nav>
+                    <ul class="navigation">
+                        <li class="pullUp"><a href="index.html">Work</a></li>
+                        <li class="pullUp"><a href="about.html">About</a></li>
+                        <li class="pullUp"><a href="#contact" onclick="menuToggle()">Contact</a></li>
+                        <li><a href="javascript:void(0)" class="icon" onclick="menuToggle()">
+                            <i class="fa-solid fa-bars"></i></a>
+                        </li>
+                    </ul>
+                </nav>
+            </div> <!--End of Navigation toggle-->
         </div>
     </header>
 
@@ -1598,6 +1604,9 @@
         </div>
 
     </footer>
+    <script 
+        src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous">
+    </script>
     <script src="js/scripts.js"></script>
 </body>
 
