Navigation Name Change
- changed navigation item Work title to Projects

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     
                 <nav>
                     <ul class="navigation">
-                        <li class="pullUp"><a href="index.html">Work</a></li>
+                        <li class="pullUp"><a href="index.html">Projects</a></li>
                         <li class="pullUp"><a href="about.html">About</a></li>
                         <li class="pullUp"><a href="#contact" onclick="menuToggle()">Contact</a></li>
                         <li><a href="javascript:void(0)" class="icon" onclick="menuToggle()">
