--- a/plutopay.html
+++ b/plutopay.html
@@ -28,7 +28,7 @@
     
                 <nav>
                     <ul class="navigation">
-                        <li class="pullUp"><a href="index.html">Work</a></li>
+                        <li class="pullUp"><a href="index.html">Projects</a></li>
                         <li class="pullUp"><a href="about.html">About</a></li>
                         <li class="pullUp"><a href="#contact" onclick="menuToggle()">Contact</a></li>
                         <li><a href="javascript:void(0)" class="icon" onclick="menuToggle()">
@@ -45,6 +45,17 @@
        <div> <!--PlutoPay page-->
         <!--Add Table of Contents on left side of page???-->
             <div class="container"><!--total container-->
+                <div>
+                    <h1>Contents</h1>
+                    <ul>
+                        <li><a href="#pluto-hero">Introduction</a></li>
+                        <li><a href="#pluto-process">My Process</a></li>
+                        <li><a href="#pluto-overview">Overview</a></li>
+                        <li><a href="#pluto-design">Design Iterations</a></li>
+                        <li><a href="#pluto-conclusion">Conclusion</a></li>
+                    </ul>
+                </div>
+                
                 <div id="pluto-hero"> <!--hero section-->
                     <h1>PlutoPay Case Study</h1>
                     <picture>
