--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
     
                 <nav>
                     <ul class="navigation">
-                        <li class="pullUp"><a href="#projects">Projects</a></li>
-                        <li class="pullUp"><a href="#aboutme">About</a></li>
-                        <li class="pullUp"><a href="#contact">Contact</a></li>
+                        <li><a href="#projects">Projects</a></li>
+                        <li><a href="#aboutme">About</a></li>
+                        <li><a href="#contact">Contact</a></li>
                         <li><a href="javascript:void(0)" class="icon" onclick="menuToggle()">
                             <i class="fa-solid fa-bars"></i></a>
                         </li>
@@ -54,7 +54,7 @@
         <div id="projects">
             <!--Containment Block-->
             <div class="container">
-                <h2>Projects</h2>
+                <h2 class="jumpspace">Projects</h2>
                 <!--PlutoPay Project-->
                 <!--Row and Column-->
                 <div id="p-plutopay">
@@ -1585,7 +1585,7 @@
                         <div class="column col-lg-7"><!--First Column-->
                             <h1>About Me</h1>
                             <h2>I live for the adventures that shakes my soul.</h2>
-                        <p>
+                        <p class="paragraph">
                             I love to think creatively and challenge myself to create authentic and compassionate pieces. 
                             My background in mechanical engineering gives me the problem solving skills and research skills to create fulfilling projects. 
                             Yet, I came to UX design because I desired more of an artistic, yet inclusive, outlet of my work and I enjoy user philosophy. 
@@ -1631,13 +1631,13 @@
         <!--container-->
         <div class="container">
             <h2>Contact Me</h2>
-            <p>If you would like to discuss more, share feedback, or ask any questions, please contact me.</p>
-
-            <p> Call me at <a href="tel:316-214-0954">316-214-0954</a> or email me at </p>
+            <p>If you would like to discuss more, share feedback, or ask any questions, please contact me. I'll get back to you within 24-48 hours, if not sooner!</p>
             <div> 
-                <a href="mailto:michtn.le@gmail.com" class="button contact">michtn.le@gmail.com</a>
+                <a href="mailto:michtn.le@gmail.com" class="button contact">Email me at michtn.le@gmail.com!</a>
             </div>
            
+
+            <h4>Let's Connect</h4>
             <!--Social Media-->
             <ul class="social">
                 <li>
