--- a/plutopay.html
+++ b/plutopay.html
@@ -28,9 +28,8 @@
     
                 <nav>
                     <ul class="navigation">
-                        <li class="pullUp"><a href="index.html">Projects</a></li>
-                        <li class="pullUp"><a href="about.html">About</a></li>
-                        <li class="pullUp"><a href="#contact" onclick="menuToggle()">Contact</a></li>
+                        <li class="pullUp"><a href="javascript:void(0)" onclick="history.back()"><i class="fa-solid fa-chevron-left"></i>Go Back</a></li>
+                        <li class="pullUp"><a href="#contact">Contact</a></li>
                         <li><a href="javascript:void(0)" class="icon" onclick="menuToggle()">
                             <i class="fa-solid fa-bars"></i></a>
                         </li>
@@ -77,7 +76,7 @@
                     <div> <!--Introduction Section-->
                         <h2>Introduction</h2>
                         <h3>Problem:</h3>
-                        <p>With the boom of the ecommerce market, the problem to make purchases securely and efficiently was brought forward.
+                        <p class="paragraph">With the boom of the ecommerce market, the problem to make purchases securely and efficiently was brought forward.
                             How can users track all of their finances and make money transfer safely in one tool?
                         </p>
 
@@ -85,13 +84,13 @@
                         <p>Create a responsive web app that potential users can use to transfer money, create goals and budgets, and track all of their 
                             money without the need to visit a physical bank or store. 
                         </p>
-                        <p>This project was reviewed with CareerFoundry's UX Program.</p>
+                        <p class="paragraph">This project was reviewed with CareerFoundry's UX Program.</p>
 
                         <h3>My Role:</h3>
-                        <p>UX Designer</p>
+                        <p class="paragraph">UX Designer</p>
 
                         <h3>Time Duration:</h3>
-                        <p>1.16 years</p>
+                        <p class="paragraph">1.16 years</p>
                     </div>
 
                     <div id="pluto-process"><!--Process Section-->
@@ -213,7 +212,7 @@
                         <div id="pluto-conclusion"> <!--Challenges and Takeaway section-->
                             <h2>Conclusion</h2>
                             <h3>Challenges</h3>
-                            <p>This was a fun project to tackle. As a person who uses multiple financial apps myself, I found it hard to not put my own personal 
+                            <p class="paragraph">This was a fun project to tackle. As a person who uses multiple financial apps myself, I found it hard to not put my own personal 
                                 opinions on how the design should look. I was quickly humbled when I interviewed others and was also reminded of why user-centric 
                                 designs work best. My biggest struggle was translating my designs from pen and paper into a working prototype. With time, and lots 
                                 of trial and error, I am now confident in using Figma to create thoughtful designs. 
@@ -247,13 +246,13 @@
         <!--container-->
         <div class="container">
             <h2>Contact Me</h2>
-            <p>If you would like to discuss more, share feedback, or ask any questions, please contact me.</p>
-
-            <p> Call me at <a href="tel:316-214-0954">316-214-0954</a> or email me at </p>
+            <p>If you would like to discuss more, share feedback, or ask any questions, please contact me. I'll get back to you within 24-48 hours, if not sooner!</p>
             <div> 
-                <a href="mailto:michtn.le@gmail.com" class="button contact">michtn.le@gmail.com</a>
+                <a href="mailto:michtn.le@gmail.com" class="button contact">Email me at michtn.le@gmail.com!</a>
             </div>
            
+
+            <h4>Let's Connect</h4>
             <!--Social Media-->
             <ul class="social">
                 <li>
@@ -266,7 +265,6 @@
             <!--Copyright-->
             <p>Copyright Michelle Le 2023</p>
         </div>
-
     </footer>
     <script 
         src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous">
