--- a/vocabularyapp.html
+++ b/vocabularyapp.html
@@ -27,9 +27,8 @@
     
                 <nav>
                     <ul class="navigation">
-                        <li class="pullUp"><a href="index.html">Projects</a></li>
-                        <li class="pullUp"><a href="about.html">About</a></li>
-                        <li class="pullUp"><a href="#contact" onclick="menuToggle()">Contact</a></li>
+                        <li><a href="javascript:void(0)" onclick="history.back()"><i class="fa-solid fa-chevron-left"></i>Go Back</a></li>
+                        <li><a href="#contact">Contact</a></li>
                         <li><a href="javascript:void(0)" class="icon" onclick="menuToggle()">
                             <i class="fa-solid fa-bars"></i></a>
                         </li>
@@ -200,13 +199,13 @@
         <!--container-->
         <div class="container">
             <h2>Contact Me</h2>
-            <p>If you would like to discuss more, share feedback, or ask any questions, please contact me.</p>
-
-            <p> Call me at <a href="tel:316-214-0954">316-214-0954</a> or email me at </p>
+            <p>If you would like to discuss more, share feedback, or ask any questions, please contact me. I'll get back to you within 24-48 hours, if not sooner!</p>
             <div> 
-                <a href="mailto:michtn.le@gmail.com" class="button contact">michtn.le@gmail.com</a>
+                <a href="mailto:michtn.le@gmail.com" class="button contact">Email me at michtn.le@gmail.com!</a>
             </div>
            
+
+            <h4>Let's Connect</h4>
             <!--Social Media-->
             <ul class="social">
                 <li>
@@ -219,7 +218,6 @@
             <!--Copyright-->
             <p>Copyright Michelle Le 2023</p>
         </div>
-
     </footer>
     <script 
         src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous">
