--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <!--logo-->
             <div class="navtoggle" id="myNavtoggle">
                 <a href="index.html">
-                    <img src="img/icons/favicon.ico" class="logo" alt="Logo">
+                    <img src="img/icons/name_logo.svg" class="logo" alt="Logo">
                 </a>
 
                 <nav>
@@ -50,16 +50,14 @@
         <div id="hero">
             <div class="container hero_parent">
                 <div class="hero_text">
-                    <h1>
-                        Hi, I'm Michelle Le.
-                        <span>I'm an aspiring user developer, creating inclusive designs for
-                            a genuine experience.</span>
+                    <h1>Hi, I'm Michelle Le. 
+                        <span>I'm an aspiring user developer, creating inclusive designs for a genuine experience.</span>
                     </h1>
                     <a class="secondary-button" href="files/MichelleLe_Resume.pdf" target="_blank">View My Resume</a>
                 </div>
 
                 <div class="hero_img">
-                    <img src="img/michelle_memoji.png" alt="my memoji">
+                    <img src="img/michelle_memoji_two.png" alt="my memoji">
                 </div>
             </div>
         </div>
@@ -70,12 +68,8 @@
             <div class="container">
                 <h1>Projects</h1>
                 <!--PlutoPay Project-->
-                <!--Row and Column-->
                 <div id="p-plutopay">
-                    <!--First Column/Row (Image) -->
                     <div class="project_parent">
-                        <!--class row-->
-                        <!--<div class="column col-md-6 col-lg-7">--><!--First Column-->
                         <div class="project_img">
                             <picture>
                                 <!--Mobile first image-->
@@ -216,7 +210,14 @@
                             <img src="img/icons/icons8-linkedin.svg" alt="LinkedIn logo">
                         </a>
                     </li>
+
+                    <li>
+                        <a href="https://github.com/lemic00" target="_blank">
+                            <img src="img/icons/icons8-github.svg" alt="image link to my github page">
+                        </a>
+                    </li>
                 </ul>
+
             </div>
             <!--Copyright-->
             <p>Copyright Michelle Le 2023</p>
