--- a/plutopay.html
+++ b/plutopay.html
@@ -24,14 +24,14 @@
             <!--logo-->
             <div class="navtoggle" id="myNavtoggle">
                 <a href="index.html">
-                    <img src="img/icons/favicon.ico" class="logo" alt="Logo">
+                    <img src="img/icons/name_logo.svg" class="logo" alt="Logo">
                 </a>
 
                 <nav>
                     <ul class="navigation">
-                        <li class="pullUp"><a href="javascript:void(0)" onclick="history.back()"><i
+                        <li><a href="javascript:void(0)" onclick="history.back()"><i
                                     class="fa-solid fa-chevron-left"></i>Go Back</a></li>
-                        <li class="pullUp"><a href="#contact">Contact</a></li>
+                        <li><a href="#contact">Contact</a></li>
                         <li><a href="javascript:void(0)" class="icon" onclick="menuToggle()">
                                 <i class="fa-solid fa-bars"></i></a>
                         </li>
@@ -321,7 +321,13 @@
                             <img src="img/icons/icons8-linkedin.svg" alt="LinkedIn logo">
                         </a>
                     </li>
+                    <li>
+                        <a href="https://github.com/lemic00" target="_blank">
+                            <img src="img/icons/icons8-github.svg" alt="image link to my github page">
+                        </a>
+                    </li>
                 </ul>
+
             </div>
             <!--Copyright-->
             <p>Copyright Michelle Le 2023</p>
