--- a/vocabularyapp.html
+++ b/vocabularyapp.html
@@ -24,7 +24,7 @@
             <!--logo-->
             <div class="navtoggle" id="myNavtoggle">
                 <a href="index.html">
-                    <img src="img/icons/favicon.ico" class="logo" alt="Logo">
+                    <img src="img/icons/name_logo.svg" class="logo" alt="Logo">
                 </a>
 
                 <nav>
@@ -233,7 +233,13 @@
                             <img src="img/icons/icons8-linkedin.svg" alt="LinkedIn logo">
                         </a>
                     </li>
+                    <li>
+                        <a href="https://github.com/lemic00" target="_blank">
+                            <img src="img/icons/icons8-github.svg" alt="image link to my github page">
+                        </a>
+                    </li>
                 </ul>
+
             </div>
             <!--Copyright-->
             <p>Copyright Michelle Le 2023</p>
