--- a/plutopay.html
+++ b/plutopay.html
@@ -29,8 +29,7 @@
 
                 <nav>
                     <ul class="navigation">
-                        <li><a href="javascript:void(0)" onclick="history.back()"><i
-                                    class="fa-solid fa-chevron-left"></i>Go Back</a></li>
+                        <li><a href="index.html"><i class="fa-solid fa-chevron-left"></i>Go Back</a></li>
                         <li><a href="#contact">Contact</a></li>
                         <li><a href="javascript:void(0)" class="icon" onclick="menuToggle()">
                                 <i class="fa-solid fa-bars"></i></a>
