--- a/index.html
+++ b/index.html
@@ -50,9 +50,8 @@
         <div id="hero">
             <div class="container hero_parent">
                 <div class="hero_text">
-                    <h1>Hi, I'm Michelle Le. 
-                        <span>I'm an aspiring user developer, creating inclusive designs for a genuine experience.</span>
-                    </h1>
+                    <h1>Hi, I'm Michelle Le.</h1> 
+                    <h2>I'm an aspiring user developer, creating inclusive designs for a genuine experience.</h2>
                     <a class="secondary-button" href="files/MichelleLe_Resume.pdf" target="_blank">View My Resume</a>
                 </div>
 
@@ -66,7 +65,7 @@
         <div id="projects">
             <!--Containment Block-->
             <div class="container">
-                <h1>Projects</h1>
+                <h3>Projects</h3>
                 <!--PlutoPay Project-->
                 <div id="p-plutopay">
                     <div class="project_parent">
